--- a/gb/17/4/12/n9031771.md
+++ b/gb/17/4/12/n9031771.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/roxfi2557/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/roxfi2557/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/roxfi2557/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/roxfi2557/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/roxfi2557/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/roxfi2557/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/roxfi2557/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/roxfi2557/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/roxfi2557/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/roxfi2557/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/roxfi2557/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/roxfi2557/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/roxfi2557/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/roxfi2557/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/roxfi2557/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/roxfi2557/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/roxfi2557/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/roxfi2557/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/roxfi2557/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/roxfi2557/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/roxfi2557/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/roxfi2557/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xsumwp3307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xsumwp3307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xsumwp3307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xsumwp3307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>疲软加元 天气转暖?多伦多油价上冲1.22元/升</h2>
 
 <h6></h6>
@@ -26,42 +26,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/17/2/26/n8851472.md#1">加油、住房更贵 加国年通胀率升至2.1%</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/17/4/4/n8999493.md#1">供应不足 大温油价冲向新高</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/17/4/4/n9001445.md#1">碳排交易首次拍卖 安省4.7亿收入去向受关注</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/17/4/11/n9027166.md#1">分析师：油价料蹿升6分 司机赶快加油</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/27/n11981357.md#1">加国央行降息至0.25%  企业薪酬补助增至75%</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/26/n11978291.md#1">违反自我隔离规定 加拿大罚100万或入狱</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/26/n11978303.md#1">特鲁多提醒加人：小心紧急福利计划骗局</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/26/n11978168.md#1">紧急福利 加拿大各省不同 有的直接发支票</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/26/n11977951.md#1">预订航班停飞 加国乘客无法获退款</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/26/n11977802.md#1">渥京送北京16吨防护品 被批不顾本国需要</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/2/26/n8851472.md#1">加油、住房更贵 加国年通胀率升至2.1%</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/4/4/n8999493.md#1">供应不足 大温油价冲向新高</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/4/4/n9001445.md#1">碳排交易首次拍卖 安省4.7亿收入去向受关注</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/4/11/n9027166.md#1">分析师：油价料蹿升6分 司机赶快加油</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740239.md#1">俄国关闭CBC莫斯科分社 取消记者认证</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740234.md#1">11年加拿大1,338起婴儿睡眠窒息致死事件</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740208.md#1">加拿大禁普京及千名俄国高官和军官入境</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740204.md#1">渥太华警察总长说他没要求用《紧急法》</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740129.md#1">食品和房价推动 加拿大通胀率攀升至6.8%</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740123.md#1">如何区分流感、感冒、季节性过敏及COVID-19</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/10/n11444363.md#1" target="_blank">共产暴政录：中共积极响应北塔山入侵事件</a></li><li><a href="https://github.com/roxfi2557/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/18/n10648766.md#1" target="_blank">这些患绝症的精英们何以逢生（1）</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/22/n9759413.md#1" target="_blank">陆雯：1964年的一桩惨案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/3/16/n8928422.md#1" target="_blank">一位伊朗女子的东方缘</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/27/n11980618.md#1">【现场视频】江西湖北公安混战 掀翻警车</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/28/n11983353.md#1">台夫妻逾期未缴居家检疫罚款30万 两人已出境</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/27/n11981545.md#1">【新闻看点】习近平要求与川普通话 为四件事？</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/27/n11981697.md#1">孙春兰再视察武汉 居民楼里竟传出警察呼声</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/27/n11981051.md#1">中国又一“富豪”全家移民美国</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/28/n11984334.md#1">中国真的零确诊？“黄安躲在台湾”打脸中共</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/27/n11979625.md#1">17岁女儿将闯演艺圈 李?：到签约我才知道</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/27/n11981967.md#1">跑完通告高烧38度 香港女星忧染疫入院筛检</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/26/n11978058.md#1">中共朝令夕改成常态 疫情下影院再度停业</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/26/n11977672.md#1">疫情下摘口罩与粉丝合照 发哥亲民举动遭提醒</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/23/n11965516.md#1">【命理】为何算命师说他：死后方行好运享光彩？　</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/24/n11968690.md#1">故宫离我们很近，但却离我们很远</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/14/n11940770.md#1">竹叶可驱蚊？老僧慈悲 一念结仙缘</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/25/n11974495.md#1">面对魔鬼诱惑时 您会如何选择？</a></li>
-<li><a href="https://github.com/roxfi2557/djy/blob/master/gb/20/3/17/n11948074.md#1">古人濒死体验：元神离体游历天国 预知时局</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/4/20/n13716382.md#1">【百年真相】打抱不平的侠女 为何被枪杀取肾？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/15/n13737123.md#1">一曲《梅花》为何总让人禁不住热泪盈眶</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738009.md#1">【未解之谜】动物的超能力</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13734962.md#1">【未解之谜】霍皮预言“大净化” 毁灭与希望同在？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/4/n13726629.md#1">【命相漫谈】怎么说“财多如何不发财？”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740262.md#1">【秦鹏直播】不让戴口罩 李克强和习杠上了？</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/19/n13740815.md#1">【微视频】粮价涨多少？美国争论中国关税</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13740248.md#1">【远见快评】美媒曝东航坠毁是人为 东航回应</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739318.md#1">备战台海 广东高层会议秘密录音曝光</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739256.md#1">李克强讲话“上墙”党媒争相报 释何信号</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738761.md#1">获妈妈沈殿霞赠家传首饰 郑欣宜望代代相传</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739984.md#1">介绍田中老家 任贤齐吃喝不花钱 自嘲像恶霸</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739409.md#1">刘嘉玲为学霸侄子庆生 亿万身家未来或留给对方</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739664.md#1">赵小侨怀孕30周报喜 晒孕照“想得更多祝福 ”</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739444.md#1">陈晓旭去世15周年 薛宝钗扮演者张莉贴照缅怀</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/17/n13739418.md#1">癌细胞没它会饿死？1个防癌绝佳方法 人人能做到</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/18/n13739808.md#1">搭飞机如何穿衣服比较好？ 空服员分享经验</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/13/n13735397.md#1">心脏衰竭比癌症更致命！年轻也出现 3症状要警惕</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/14/n13736831.md#1">11种营养和饮食 改善成人过动症</a></li>
+<li><a href="https://github.com/xsumwp3307/djy/blob/master/gb/22/5/16/n13738702.md#1">【健康1+1】新冠、疫苗刺突蛋白 2大方法解毒</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/roxfi2557/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/roxfi2557/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/12/n9031771.htm">疲软加元 天气转暖?多伦多油价上冲1.22元/升</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xsumwp3307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/4/12/n9031771.htm">疲软加元 天气转暖?多伦多油价上冲1.22元/升</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/roxfi2557/djy/blob/master/gb/17/4/12/n9031771.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/roxfi2557/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/roxfi2557/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/roxfi2557/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/roxfi2557/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/roxfi2557/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xsumwp3307/djy/blob/master/gb/17/4/12/n9031771.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xsumwp3307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xsumwp3307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xsumwp3307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
